--- a/views/index.html
+++ b/views/index.html
@@ -31,8 +31,8 @@
         <h3>Example Usage:</h3>
         <ul>
           <li>
-            <code>GET [project url]/api/timestamp/2015-12-25</code></li>
-          <li><code>GET project url]/api/timestamp/1450137600</code></li>
+            <code><a href="https://peach-okra.glitch.me/api/timestamp/2015-12-25">GET [project url]/api/timestamp/2015-12-25</a></code></li>
+          <li><code><a href="https://peach-okra.glitch.me/api/timestamp/1450137600">GET project url]/api/timestamp/1450137600</a></code></li>
         </ul>
 
         <h3>Example Output:</h3>
@@ -42,7 +42,7 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="http://www.freecodecamp.com/">freeCodeCamp</a> | <a href="https://hyperdev.com/#!/remix/FCC_API_timestamp_bplate/8338be2-a353-4892-8a0d-6295e4f12eb5">Click here to Remix</a>
+          by <a href="https://codepen.io/snygg">snygg</a>
         </p>
       </div>
    </body>
