🏥⏳ Checkpoint ./server.js:1469898/137 ./views/index.html:1469898/72

--- a/views/index.html
+++ b/views/index.html
@@ -31,8 +31,11 @@
         <h3>Example Usage:</h3>
         <ul>
           <li>
-            <code><a href="https://peach-okra.glitch.me/api/timestamp/2015-12-25">GET [project url]/api/timestamp/2015-12-25</a></code></li>
-          <li><code><a href="https://peach-okra.glitch.me/api/timestamp/1450137600000">GET project url]/api/timestamp/1450137600000</a></code></li>
+            <a href="https://peach-okra.glitch.me/api/timestamp/2015-12-25">[project url]/api/timestamp/2015-12-25</a>
+          </li>
+          <li>
+            <a href="https://peach-okra.glitch.me/api/timestamp/1450137600000">[project url]/api/timestamp/1450137600000</a>
+          </li>
         </ul>
 
         <h3>Example Output:</h3>
